[tool.poetry]
name = "pay-here"
version = "0.1.0"
description = ""
authors = ["wonho <adler0311@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.105.0"
uvicorn = "^0.25.0"
alembic = "^1.13.1"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
pymysql = "^1.1.0"
httpx = "^0.26.0"
jwt = "^1.3.1"
python-jose = {extras = ["cryptocraphy"], version = "^3.3.0"}
python-multipart = "^0.0.6"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
orjson = "^3.9.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
autoflake = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
